PR fortran/16336 * match.c (match_common): Fix error reporting for used common.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@84462 138bc75d-0d04-0410-961f-82ee72b054a4